--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
 	},
 	"require": {
 		"fab/site-package": "@dev",
+		"helhum/typo3-console": "^8.1",
 		"typo3/cms-backend": "^12.4.0",
 		"typo3/cms-belog": "^12.4.0",
 		"typo3/cms-beuser": "^12.4.0",
@@ -37,7 +38,6 @@
 		"typo3/cms-impexp": "^12.4.0",
 		"typo3/cms-info": "^12.4.0",
 		"typo3/cms-install": "^12.4.0",
-		"typo3/cms-introduction": "^4.6",
 		"typo3/cms-lowlevel": "^12.4",
 		"typo3/cms-reactions": "^12.4.0",
 		"typo3/cms-rte-ckeditor": "^12.4.0",
